# jfbench

./: .gitignore  .pre-commit-config.yaml  README.ja.md  README.md  pyproject.toml
data/: LICENSE-ODC-BY-1.0  ifbench_ja_translated.jsonl
src/jfbench/: __init__.py  imports.py  llm.py  protocol.py
src/jfbench/benchmark/: analyze.py  build.py  eval.py
src/jfbench/constraints/: README.md  __init__.py  _competitives.py  _group.py  _utils.py
src/jfbench/constraints/character/: __init__.py  punctuation.py  scripts.py  whitespace.py
src/jfbench/constraints/content/: __init__.py  excluded.py  included.py  intrinsic.py  irrevant.py  reason.py
src/jfbench/constraints/format/: __init__.py  bullet_points.py  citation.py  csv.py  diff.py  html.py  indent.py  javascript.py  json.py  latex.py  markdown.py  python.py  sentence_delimiter.py  tables.py  tsv.py  xml.py  yaml.py
src/jfbench/constraints/ifbench_count/: __init__.py  conjunction.py  numbers.py  person_names.py  pronouns.py  punctuation.py  unique_words.py
src/jfbench/constraints/ifbench_format/: __init__.py  bullets.py  emoji.py  indent.py  newline.py  parentheses.py  quotes.py  template.py  thesis.py
src/jfbench/constraints/ifbench_ratio/: __init__.py  overlap.py  sentence_balance.py  sentence_type.py  sentence_words.py
src/jfbench/constraints/ifbench_repeat/: __init__.py  repeat.py
src/jfbench/constraints/ifbench_sentence/: __init__.py  alliteration.py  increment.py  keyword.py
src/jfbench/constraints/ifbench_words/: __init__.py  length.py  phonetics.py  positions.py  sequence.py
src/jfbench/constraints/length/: __init__.py  characters.py  lines.py  paragraphs.py  sections.py  sentences.py  words.py
src/jfbench/constraints/logic/: __init__.py  negation.py
src/jfbench/constraints/meta_output/: __init__.py  explanation.py  greeting.py  self_attestation.py  self_reference.py
src/jfbench/constraints/notation/: __init__.py  camelcase.py  currency.py  date.py  decimal_places.py  email_address.py  furigana.py  grouping.py  kanji_numerals.py  phone_number.py  postal_code.py  rounding.py  snakecase.py  time.py  titlecase.py  unit.py  zero_padding.py
src/jfbench/constraints/processing/: __init__.py  concat.py  extraction.py  prefix.py  replacement.py  sort.py  split.py  statistics.py  suffix.py
src/jfbench/constraints/structure/: __init__.py  heading.py  section.py
src/jfbench/constraints/style/: __init__.py  emotional.py  english.py  first_person.py  japanese.py  plain.py  polite.py  taigendome.py  tense.py  tone.py  typo.py  vocabulary.py
src/jfbench/prompts/: __init__.py  ifbench.py
src/jfbench/visualization/: __init__.py  constraints.py  data_loader.py  model_comparison.py  model_order.py  overview.py  visualize.py
tests/: conftest.py  test_protocol.py
tests/benchmark_tests/: test_analyze.py  test_build.py  test_eval.py
tests/constraints_tests/: test__competitives.py  test_competitives_conflicts.py  test_document_normalization.py  test_group.py  test_instruction_wording.py  test_utils.py
tests/constraints_tests/character_tests/: test_punctuation.py  test_scripts.py  test_whitespace.py
tests/constraints_tests/content_tests/: test_content_competitives.py  test_excluded.py  test_included.py  test_intrinsic.py  test_irrevant.py  test_reason.py
tests/constraints_tests/format_tests/: test_bullet_points.py  test_citation.py  test_csv.py  test_diff.py  test_html.py  test_indent.py  test_javascript.py  test_json.py  test_latex.py  test_markdown.py  test_python.py  test_sentence_delimiter.py  test_tables.py  test_tsv.py  test_xml.py  test_yaml.py
tests/constraints_tests/ifbench_count_tests/: test_conjunction.py  test_ifbench_count_punctuation.py  test_pronouns.py  test_unique_words.py
tests/constraints_tests/ifbench_format_tests/: test_emoji.py  test_ifbench_format.py  test_newline.py
tests/constraints_tests/ifbench_ratio_tests/: test_overlap.py  test_sentence_balance.py  test_sentence_type.py  test_sentence_words.py  test_shared.py
tests/constraints_tests/ifbench_repeat_tests/: test_competitives.py  test_repeat.py
tests/constraints_tests/ifbench_sentence_tests/: test_alliteration.py  test_increment.py  test_keyword.py
tests/constraints_tests/ifbench_words_tests/: test_length.py  test_phonetics.py  test_positions.py  test_sequence.py
tests/constraints_tests/length_tests/: test_characters.py  test_lines.py  test_paragraphs.py  test_sections.py  test_sentences.py  test_words.py
tests/constraints_tests/logic_tests/: test_negation.py
tests/constraints_tests/meta_output_tests/: test_explanation.py  test_greeting.py  test_self_attestation.py  test_self_reference.py
tests/constraints_tests/notation_tests/: test_decimal_places.py  test_email_address.py  test_grouping.py  test_kanji_numerals.py  test_notation_custom_constraints.py  test_phone_number.py  test_postal_code.py  test_titlecase.py  test_unit.py
tests/constraints_tests/processing_tests/: test_concat.py  test_extraction.py  test_postfix.py  test_prefix.py  test_replacement.py  test_sort.py  test_split.py  test_statistics.py
tests/constraints_tests/structure_tests/: test_heading.py  test_section.py
tests/constraints_tests/style_tests/: test_emotional.py  test_english.py  test_first_person.py  test_japanese.py  test_plain.py  test_polite.py  test_taigendome.py  test_tense.py  test_tone.py  test_typo.py  test_vocabulary.py
tests/llm_tests/: test_llm.py
tests/prompts_tests/: test_ifbench.py
tests/visualization_tests/: test_constraints.py  test_data_loader.py  test_model_comparison.py  test_model_order.py  test_overview.py
tests/visualization_tests/visualize_tests/: test_visualize.py
